--- a/fastapi-deployment/values.yaml
+++ b/fastapi-deployment/values.yaml
@@ -76,3 +76,11 @@ tolerations: []
 
 
 affinity: {}
+
+httpRoute:
+  enabled: false
+  annotations: {}
+  parentRefs: []
+  hostnames: []
+  rules: []
+
