hpa error fixed

--- a/fastapi-deployment/values.yaml
+++ b/fastapi-deployment/values.yaml
@@ -84,3 +84,8 @@ httpRoute:
   hostnames: []
   rules: []
 
+autoscaling:
+  enabled: false
+  minReplicas: 1
+  maxReplicas: 100
+  targetCPUUtilizationPercentage: 80
