--- a/fastapi-deployment/templates/db-statefulset.yaml
+++ b/fastapi-deployment/templates/db-statefulset.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: postgres
-          image: "{{ .Values.db.image.repository }}:{{ .Values.db.image.tag }}"
+          image: postgres:17-alpine
           imagePullPolicy: {{ .Values.db.image.pullPolicy | default "IfNotPresent" }}
           ports:
             - containerPort: {{ .Values.db.port }}
