--- a/fastapi-deployment-prod/values.yaml
+++ b/fastapi-deployment-prod/values.yaml
@@ -58,12 +58,14 @@ db:
   user: fastapi_traefik_prod
   password: fastapi_traefik_prod
   database: fastapi_traefik_prod
-  host: fastapi-prod-db
+  #host: fastapi-prod-db
+  host: app-fastapi-deployment-prod-db
   storage:
     size: 5Gi
     storageClassName: ""
   environment:
-     - DATABASE_URL=postgresql://{{ .Values.db.user }}:{{ .Values.db.password }}@{{ .Values.db.host }}:{{ .Values.db.port }}/{{ .Values.db.database }}
+     - DATABASE_URL=postgresql://fastapi_traefik_prod:fastapi_traefik_prod@app-fastapi-deployment-prod-db:5432/fastapi_traefik_prod
+     
 
 httpRoute:
   enabled: false
